--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,8 @@ description: > # your text below (remove <br> elements if you don't need line br
   Data Scientist
   <br><br>
   <a href="https://www.linkedin.com/in/mohan-sharma-4a26a9127/">View My LinkedIn Profile</a> 
-  <a href="https://github.com/mohantechis?tab=repositories">View the Project on GitHub</a>
+  <a href="https://github.com/mohantechis?tab=repositories">View the Proj on GitHub</a>
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
+s
